Visual and page logic improvements

--- a/src/features/user/profile/style.scss
+++ b/src/features/user/profile/style.scss
@@ -2,7 +2,7 @@
 .user-profile {
   background-color: #f0f0f0;
   border-radius: 5px;
-  width: 100%;
+  //width: 100%;
   display: grid;
   grid-template-areas:
     'user-avatar user-name'
